--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,8 @@
 !!! 5
 html(lang="en")
     head
-        title Proxy Intercept
+        title BrowServer
+        script(src="https://www.google.com/jsapi?key=ABQIAAAAawmq4aHfbGTpFeCsHtOkWBQsQd0vIpKFCtufn2SIqWjCv8cOVxQ_kgsyr8jKORJb1U8IsMaowj4EYA", type="text/javascript")
         script(src="/js/lib/jquery-1.6.1.js", type="application/javascript")
         script(src="/js/lib/mustache.js", type="application/javascript")
         script(src="/js/lib/underscore.js", type="application/javascript")
