First real checkin

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,12 @@
 
-#header
-    h1 BrowServer
-#content
-    div hello world
+.header 
+    h1 Mocker 
+    h2 a web server in the client
+.content
+    textarea.code-block
+
+script(type='text/javascript')
+    init();
+
+
+
