--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,53 @@
 
 body {
-    
-    background-color:red
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
+    background-color:#373737;
+    font: 14px/1 "Droid Sans",Helvetica,Arial,sans-serif;
+}
 
+.header {
+
+    background: url(/images/background.png) repeat-x 0 0;
+    color: white;
+    height: 38px;
+    text-shadow: black 0 0 2px;
+    font-weight: bold;
+}
+
+.header h1 {
+
+    margin:0;
+    padding: 8px 0 2px 10px;
+    font-size:15pt;    
+}
+
+.header h2 {
+    font-size:8pt;
+    color:red;
+    font-style:italic;
+    margin:0px 5px 0px 10px;
+}
+
+.content {
+    margin: 15px 0 0 10px;
+}
+
+.code-block {
+    -webkit-appearance: textarea;
+    background-color: white;
+    border: 1px solid;
+    -webkit-rtl-ordering: logical;
+    -webkit-user-select: text;
+    -webkit-box-orient: vertical;
+    resize: auto;
+    cursor: auto;
+    padding: 2px;
+    white-space: pre-wrap;
+    word-wrap: break-word;
 }
