--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -35,10 +35,15 @@ body {
 }
 
 .content {
-    margin: 15px 0 0 10px;
+    margin: 30px 0 0 10px;
 }
 
 .code-block {
+    background-color:#C0C0C0;
+    width:800px;
+}
+
+.code-block textarea {
     -webkit-appearance: textarea;
     background-color: white;
     border: 1px solid;
