--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,8 @@
     h1 Mocker 
     h2 a web server in the client
 .content
-    textarea.code-block
+    div.code-block
+        textarea(value='function foo={}')
 
 script(type='text/javascript')
     init();
