--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,8 +7,9 @@ html(lang="en")
         script(src="/js/lib/mustache.js", type="application/javascript")
         script(src="/js/lib/underscore.js", type="application/javascript")
         script(src="/js/lib/backbone.js", type="application/javascript")
-        script(src="/js/client/browserver.js", type="application/javascript")
+        script(src="/js/lib/uuid.js", type="application/javascript")
         script(src="/socket.io/socket.io.js", type="application/javascript")
+        script(src="/js/client/browserver.js", type="application/javascript")
         link(rel='stylesheet', href='/css/styles.css')
     
         link(rel="stylesheet", href="/css/code-mirror/codemirror.css")
