--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,6 +34,42 @@ body {
     margin:0px 5px 0px 10px;
 }
 
+.header .links {
+    top:0px;
+    font-family: 'Droid Sans', Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    float: right;
+    height: 1px;
+    margin: 0 100px 0 0;
+}
+
+.header .links ul {
+    list-style: none;
+    margin:0;
+}
+
+.header .links ul li {
+    float: right;
+    font-size: 14px;
+    list-style-type: none;
+    margin: 11px 0 0 15px;
+    cursor:pointer;
+}
+
+.header .links .vote {
+    top: -6px;
+    height:25px;
+    position: relative;
+    background: grey;
+}   
+
+.error {
+    margin:20px;
+    font-size:25pt;
+    color:white;
+    font-weight:bold;
+}
+
 .content {
     margin: 30px 0 0 10px;
 }
@@ -44,6 +80,7 @@ body {
 }
 
 .code-block textarea {
+    display: none;
     -webkit-appearance: textarea;
     background-color: white;
     border: 1px solid;
