--- a/views/index.jade
+++ b/views/index.jade
@@ -10,23 +10,26 @@
     h2 a web server in the client
 .content
     div.code-block
-        textarea
-            /***
-            *This default function is where 
-            *all requests come to.  It is 
-            *up to the programmer to 
-            *route request, write to the response 
-            *stream and end the response. 
-            *
-            *@param request contains headers and URL
-            *@param response emits write, end
-            */ 
-            exports.handleResponse = function(request, response) {
+        div.code-controls
+            div.save Save
+        div.code-container
+            textarea
+                /***
+                *This default function is where 
+                *all requests come to.  It is 
+                *up to the programmer to 
+                *route request, write to the response 
+                *stream and end the response. 
+                *
+                *@param request contains headers and URL
+                *@param response emits write, end
+                */ 
+                exports.handleResponse = function(request, response) {
             
-                response.write('hello world');
-                response.end();
+                    response.write('hello world');
+                    response.end();
 
-            }
+                }
 
 script(type='text/javascript')
     init();
