--- a/views/index.jade
+++ b/views/index.jade
@@ -8,6 +8,7 @@
             li.hit Hit Server
     h1 Mocker 
     h2 a web server in the client
+    div.status saving
 .content
     div.code-block
         div.code-controls
