--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,8 @@ html(lang="en")
         title Mocker
         script(src="https://www.google.com/jsapi?key=ABQIAAAAawmq4aHfbGTpFeCsHtOkWBQsQd0vIpKFCtufn2SIqWjCv8cOVxQ_kgsyr8jKORJb1U8IsMaowj4EYA", type="text/javascript")
         script(src="/js/client/functions.js", type="application/javascript")   
-        script(src="/js/lib/jquery-1.6.1.js", type="application/javascript")
+        script(src="/js/lib/jquery-1.6.2.min.js", type="application/javascript")
+        script(src="/js/lib/jquery-ui-1.8.16.custom.min.js", type="application/javascript")
         script(src="/js/lib/mustache.js", type="application/javascript")
         script(src="/js/lib/underscore.js", type="application/javascript")
         script(src="/js/lib/backbone.js", type="application/javascript")
