--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,8 @@
 .header 
     div.links
         ul.app
-            li.hit View
+            li.hit View it
+                span.bang
             li.save Save            
         ul.system
             li.vote 
@@ -15,8 +16,7 @@
     div.code-block
         div#files
             ul
-                li.file.active server.js
-                li.file new file +              
+                li.newFile new file +              
         div.code-container
             textarea
                 /***
